--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
 </head>
 
 <body>
-	<a href="Assignment 1">
+	<a href="../site/Assignment 1">
 		Assignment 1 <br>
 	</a>
-	<a href="Assignment 2">
+	<a href="../site/Assignment 2">
 	Assignment 2 <br>
 	</a>
-	<a href="Assignment 3">
+	<a href="../site/Assignment 3">
 	Assignment 3 <br>
 	</a>
-	<a href="Assignment 4">
+	<a href="../site/Assignment 4">
 	Assignment 4 <br>
 	</a>
-	<a href="Assignment 5">
+	<a href="../site/Assignment 5">
 	Assignment 5 <br>
+	</a>
+	<a href="../site/Assignment 6">
+	Assignment 6 <br>
 	</a>
 </body>
 </html>
