--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<a href="../site/Assignment 5">
 	Assignment 5 <br>
 	</a>
-	<a href="../site/Assignment 6">
+	<a href="assignment6/index.html">
 	Assignment 6 <br>
 	</a>
 </body>
