--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
 	<a href="assignment6/index.html">
 	Assignment 6 <br>
 	</a>
+	<a href="../assignment 7/assignment7-index.html">
+	Assignment 7 <br>
+	</a>
 </body>
 </html>
