--- a/assignment7/assignment7-index.html
+++ b/assignment7/assignment7-index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>index</title>
-<link href="../../assignment 7/assignment7.css" rel="stylesheet" type="text/css">
+<link href="assignment7.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -21,6 +21,5 @@
         <br><br>
 		&ensp;&ensp;The piece on Gainsborough Street is not a Banksy piece. The main giveaway for this is the location of the painting. Banksy loves to draw attention to his work and whatever his message might be, so he puts his pieces in easily accessible areas. This painting is in a parking lot in the back of Northeastern’s campus that isn’t traversed a lot. The next give away is that the art style, while similar, isn’t Banksy’s. There are too many details in the face, and there are greys to smooth the transition from white to black, while Banksy’s work is famous for that strong contrast of black and white. </copy>
 		</div>
-		
 	</div>
 </html>
