--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
 </head>
 
 <body>
-	<a href="../site/Assignment 1">
+	<a href="assignment1/SydneyT-Affordances in the Environment.pdf">
 		Assignment 1 <br>
 	</a>
-	<a href="../site/Assignment 2">
+	<a href="assignment2/assignment2.pdf">
 	Assignment 2 <br>
 	</a>
-	<a href="../site/Assignment 3">
+	<a href="assignment3/assignment3.pdf">
 	Assignment 3 <br>
 	</a>
-	<a href="../site/Assignment 4">
+	<a href="assignment4/SydneyT-assignment4.pdf">
 	Assignment 4 <br>
 	</a>
-	<a href="../site/Assignment 5">
+	<a href="assignment5/nonsense app XD writeup.pdf">
 	Assignment 5 <br>
 	</a>
 	<a href="assignment6/index.html">
