--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
 	<a href="assignment7/assignment7-index.html">
 	Assignment 7 <br>
 	</a>
+	<a href="../final project/index.html">
+	Assignment 8
+	</a>
 </body>
 </html>
