--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<a href="assignment7/assignment7-index.html">
 	Assignment 7 <br>
 	</a>
-	<a href="../final project/index.html">
+	<a href="assignment8/index.html">
 	Assignment 8
 	</a>
 </body>
